Styling changes - removed purple card border, fixed spacing on buttons

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -23,7 +23,7 @@
   // padding: 10px;
   margin-top: 12px;
   margin-bottom: 12px;
-  border: 2px solid $primary;
+  // border: 2px solid $primary;
   .btn-outline-primary {
     color: $primary;
   }
