--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -9,6 +9,6 @@ text-align: center;
   // background-color: #5857D5;
   padding: 10px;
   margin-bottom: 25px;
-  border: 2px solid #5857D5;
+  // border: 2px solid #5857D5;
 }
 
